@@ -30,7 +30,8 @@
 
 */
 
-static char * version_str = "0.66 20130123";    /* spc4r36 + sbc3r34 */
+static char * version_str = "0.66 20130301";    /* spc4r36 + sbc3r35 */
+        /* And with sbc3r35, vale Mark Evans */
 
 extern void svpd_enumerate_vendor(void);
 extern int svpd_decode_vendor(int sg_fd, int num_vpd, int subvalue,
