@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.36 [20130228] [svn: r485]
+Changelog for sg3_utils-1.36 [20130305] [svn: r486]
   - sg_lib: improve snprintf handling
   - sg_vpd: Protocol-specific port information VPD page for
     SAS SSP, persistent connection (spl3r2)
@@ -14,6 +14,8 @@ Changelog for sg3_utils-1.36 [20130228] [svn: r485]
   - sg_luns: add --test=LUNHEX option for decoding LUNs
     - decoded luns output in decimal or hex (if -HH given)
     - can map between T10 and Linux LUN representations
+    - add '--linux' option to show Linux LUN after T10
+      representation
   - sg_cmds (lib): if noisy given, give more UA info
 
 Changelog for sg3_utils-1.35 [20130117] [svn: r476]
